# caid-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LLM_GUIDE.md  README.md  ROADMAP.md  pyproject.toml  server.json  server.py  smithery.yaml
.github/workflows/: publish-registry.yml  publish.yml  test.yml
caid_mcp/: __init__.py  core.py  types.py
caid_mcp/tools/: __init__.py  advanced.py  assembly.py  booleans.py  compound.py  curves.py  export.py  fasteners.py  heal.py  history.py  io.py  modify.py  parts_library.py  parts_user.py  parts_warehouse.py  primitives.py  query.py  scene.py  scene_org.py  split.py  sweep.py  transforms.py  view.py
examples/: GALLERY.md  quickstart.py
tests/: test_cadquery_mcp.py  test_caid_mcp.py
